--- a/src/main/resources/templates/test/logintest.html
+++ b/src/main/resources/templates/test/logintest.html
@@ -3,73 +3,127 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <link rel="stylesheet" href="./login.css">
-  <script src="./login.js"></script>
+  <link rel="stylesheet" href="/login.css">
 </head>
 <body>
-<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+<div id="container" class="container">
+  <!-- FORM SECTION -->
+  <div class="row">
+    <!-- SIGN UP -->
+    <div class="col align-items-center flex-col sign-up">
+      <div class="form-wrapper align-items-center">
+        <div class="form sign-up">
+          <div class="input-group">
+            <i class='bx bxs-user'></i>
+            <input type="text" placeholder="Username">
+          </div>
+          <div class="input-group">
+            <i class='bx bx-mail-send'></i>
+            <input type="email" placeholder="Email">
+          </div>
+          <div class="input-group">
+            <i class='bx bxs-lock-alt'></i>
+            <input type="password" placeholder="Password">
+          </div>
+          <div class="input-group">
+            <i class='bx bxs-lock-alt'></i>
+            <input type="password" placeholder="Confirm password">
+          </div>
+          <button>
+            Sign up
+          </button>
+          <p>
+              <span>
+                Already have an account?
+              </span>
+            <b onclick="toggle()" class="pointer">
+              Sign in here
+            </b>
+          </p>
+        </div>
+      </div>
 
-<div class="login">
-  <div class="login__content">
-    <div class="login__img">
-      <img src="https://image.freepik.com/free-vector/code-typing-concept-illustration_114360-3581.jpg" alt="user login">
     </div>
-    <div class="login__forms">
-      <!--         login form -->
-      <form action="" class="login__register" id="login-in">
-        <h1 class="login__title">Sign In</h1>
-        <div class="login__box">
-          <i class='bx bx-user login__icon'></i>
-          <input type="text" placeholder="Username" class="login__input">
+    <!-- END SIGN UP -->
+    <!-- SIGN IN -->
+    <div class="col align-items-center flex-col sign-in">
+      <div class="form-wrapper align-items-center">
+        <div class="form sign-in">
+          <div class="input-group">
+            <i class='bx bxs-user'></i>
+            <input type="text" placeholder="Username">
+          </div>
+          <div class="input-group">
+            <i class='bx bxs-lock-alt'></i>
+            <input type="password" placeholder="Password">
+          </div>
+          <button>
+            Sign in
+          </button>
+          <p>
+            <b>
+              Forgot password?
+            </b>
+          </p>
+          <p>
+              <span>
+                Don't have an account?
+              </span>
+            <b onclick="toggle()" class="pointer">
+              Sign up here
+            </b>
+          </p>
         </div>
-        <div class="login__box">
-          <i class='bx bx-lock login__icon'></i>
-          <input type="text" placeholder="Password" class="login__input">
-        </div>
-        <a href="#" class="login__forgot">Forgot Password? </a>
+      </div>
+      <div class="form-wrapper">
 
-        <a href="#" class="login__button">Sign In</a>
-
-        <div>
-          <span class="login__account login__account--account">Don't Have an Account?</span>
-          <span class="login__signin login__signin--signup" id="sign-up">Sign Up</span>
-        </div>
-      </form>
-
-      <!--         create account form -->
-      <form action="" class="login__create none" id="login-up">
-        <h1 class="login__title">Create Account</h1>
-        <div class="login__box">
-          <i class='bx bx-user login__icon'></i>
-          <input type="text" placeholder="Username" class="login__input">
-        </div>
-
-        <div class="login__box">
-          <i class='bx bx-at login__icon'></i>
-          <input type="text" placeholder="Email" class="login__input">
-        </div>
-
-        <div class="login__box">
-          <i class='bx bx-lock login__icon'></i>
-          <input type="text" placeholder="Password" class="login__input">
-        </div>
-
-        <a href="#" class="login__button">Sign Up</a>
-
-        <div>
-          <span class="login__account login__account--account">Already have an Account?</span>
-          <span class="login__signup login__signup--signup" id="sign-in">Sign In</span>
-        </div>
-
-        <div class="login__social">
-          <a href="#" class="login__social--icon"><i class='bx bxl-facebook'></i></a>
-          <a href="#" class="login__social--icon"><i class='bx bxl-twitter'></i></a>
-          <a href="#" class="login__social--icon"><i class='bx bxl-google'></i></a>
-          <a href="#" class="login__social--icon"><i class='bx bxl-github'></i></a>
-        </div>
-      </form>
+      </div>
     </div>
+    <!-- END SIGN IN -->
   </div>
+  <!-- END FORM SECTION -->
+  <!-- CONTENT SECTION -->
+  <div class="row content-row">
+    <!-- SIGN IN CONTENT -->
+    <div class="col align-items-center flex-col">
+      <div class="text sign-in">
+        <h2>
+          Welcome
+        </h2>
+
+      </div>
+      <div class="img sign-in">
+
+      </div>
+    </div>
+    <!-- END SIGN IN CONTENT -->
+    <!-- SIGN UP CONTENT -->
+    <div class="col align-items-center flex-col">
+      <div class="img sign-up">
+
+      </div>
+      <div class="text sign-up">
+        <h2>
+          Join with us
+        </h2>
+
+      </div>
+    </div>
+    <!-- END SIGN UP CONTENT -->
+  </div>
+  <!-- END CONTENT SECTION -->
 </div>
 </body>
+<script layout:fragment="script" type="text/javascript">
+let container = document.getElementById('container')
+
+toggle = () => {
+  container.classList.toggle('sign-in')
+  container.classList.toggle('sign-up')
+}
+
+setTimeout(() => {
+  container.classList.add('sign-in')
+}, 200)
+</script>
 </html>
