관리자페이지 회원정보 가져오기
관리자 페이지에서 회원정보 가져오는 기능 추가
비밀번호 제거 및 디자인 추가 필요

--- a/src/main/resources/templates/admin/adminMain.html
+++ b/src/main/resources/templates/admin/adminMain.html
@@ -2,10 +2,79 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <title>adminMain</title>
 </head>
 <body>
 <h3>어드민 페이지 메인입니다</h3>
 <div th:text="${data}"></div>
+<div id="userListTable">
+
+</div>
+<!--<table>-->
+<!--    <tr>-->
+<!--        <th>UserId</th>-->
+<!--        <th>UsedId</th>-->
+<!--        <th>Pw</th>-->
+<!--        <th>Address</th>-->
+<!--        <th>Phone</th>-->
+<!--        <th>Email</th>-->
+<!--    </tr>-->
+<!--    <tbody id="UserListTbody">-->
+
+<!--    </tbody>-->
+<!--</table>-->
+<button onclick="getUserList()">회원정보 보기</button>
+
+
+<script th:inline="javascript">
+    function getUserList() {
+        console.log("비동기 통신 시작")
+        $.ajax({
+            url: "/adminGetUserList",
+            type: 'GET',
+            dataType: 'json',
+            success: function (result) {
+                console.log("통신 성공");
+                console.log(result);
+                $('#userListTable').html("")
+                // 서버에서 반환된 JSON 데이터 파싱
+                // 데이터를 처리하고 화면에 출력
+                var html = '<table>\n' +
+                    '    <tr>\n' +
+                    '        <th>UserId</th>\n' +
+                    '        <th>UsedId</th>\n' +
+                    '        <th>Pw</th>\n' +
+                    '        <th>Address</th>\n' +
+                    '        <th>Phone</th>\n' +
+                    '        <th>Email</th>\n' +
+                    '    </tr>\n' +
+                    '    <tbody id="UserListTbody">\n' +
+                    '\n' +
+                    '    </tbody>\n' +
+                    '</table>';
+                $('#userListTable').append(html)
+                for (var i = 0; i < result.length; i++) {
+                    var tableTd = '<tr>';
+                    tableTd += '<td>' + result[i].userId + '</td>';
+                    tableTd += '<td>' + result[i].userUseId + '</td>';
+                    tableTd += '<td>' + result[i].userPw + '</td>';
+                    tableTd += '<td>' + result[i].userAddress + '</td>';
+                    tableTd += '<td>' + result[i].userPhone + '</td>';
+                    tableTd += '<td>' + result[i].userEmail + '</td>';
+                    tableTd += '</tr>';
+
+                    $('#UserListTbody').append(tableTd);
+                    // $('#tableBody').load();
+                }
+            },
+            error: function () {
+                alert("통신실패")
+            }
+        });
+    }
+</script>
 </body>
+
 </html>
