--- a/src/main/resources/templates/admin/adminMain.html
+++ b/src/main/resources/templates/admin/adminMain.html
@@ -11,7 +11,7 @@
 <h3>어드민 페이지 메인입니다</h3>
 <div th:text="${data}"></div>
 <div id="userListTable">
-
+선택해주세요
 </div>
 <button onclick="getUserList()">회원정보 보기</button>
 </body>
