--- a/src/main/resources/templates/admin/adminMain.html
+++ b/src/main/resources/templates/admin/adminMain.html
@@ -14,6 +14,7 @@
 선택해주세요
 </div>
 <button onclick="getUserList()">회원정보 보기</button>
+<button><a th:href="@{/adminMail.do}">메일보내기</a></button>
 </body>
 
 </html>
