--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-  <link rel="stylesheet" href="/login.css">
-</head>
-<body>
+<html layout:decorate="~{layout}">
 <div id="container" class="container">
   <!-- FORM SECTION -->
   <div class="row">
@@ -113,7 +106,7 @@
   </div>
   <!-- END CONTENT SECTION -->
 </div>
-</body>
+
 <script layout:fragment="script" type="text/javascript">
 let container = document.getElementById('container')
 
