--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -1,5 +1,5 @@
 <html layout:decorate="~{layout}">
-<div id="container" class="container">
+<div layout:fragment="content" id="container" class="container">
   <!-- FORM SECTION -->
   <div class="row">
     <!-- SIGN UP -->
