--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -6,25 +6,36 @@
     <div class="col align-items-center flex-col sign-up">
       <div class="form-wrapper align-items-center">
         <div class="form sign-up">
+        <form th:action="@{/signup}" th:object="${userCreateForm}" method="post">
+          <div th:replace="~{form_errors :: formErrorsFragment}"></div>
           <div class="input-group">
             <i class='bx bxs-user'></i>
-            <input type="text" placeholder="Username">
+            <input type="text" th:field="*{id}" placeholder="아이디">
+          </div>
+          <div class="input-group">
+            <i class='bx bxs-lock-alt'></i>
+            <input type="password" th:field="*{password1}" placeholder="비밀번호">
+          </div>
+          <div class="input-group">
+            <i class='bx bxs-lock-alt'></i>
+            <input type="password" th:field="*{password2}" placeholder="비밀번호 확인">
+          </div>
+          <div class="input-group">
+            <i class="bx bxs-lock-alt"></i>
+            <input type="text" th:field="*{address}" placeholder="주소">
+          </div>
+          <div class="input-group">
+            <i class="bx bxs-lock-alt"></i>
+            <input type="text" th:field="*{phone}" placeholder="전화번호">
           </div>
           <div class="input-group">
             <i class='bx bx-mail-send'></i>
-            <input type="email" placeholder="Email">
+            <input type="email" th:field="*{email}" placeholder="이메일">
           </div>
-          <div class="input-group">
-            <i class='bx bxs-lock-alt'></i>
-            <input type="password" placeholder="Password">
-          </div>
-          <div class="input-group">
-            <i class='bx bxs-lock-alt'></i>
-            <input type="password" placeholder="Confirm password">
-          </div>
-          <button>
-            Sign up
+          <button type="submit">
+            회원가입
           </button>
+          </form>
           <p>
               <span>
                 Already have an account?
@@ -44,11 +55,11 @@
         <div class="form sign-in">
           <div class="input-group">
             <i class='bx bxs-user'></i>
-            <input type="text" placeholder="Username">
+            <input type="text" placeholder="아이디">
           </div>
           <div class="input-group">
             <i class='bx bxs-lock-alt'></i>
-            <input type="password" placeholder="Password">
+            <input type="password" placeholder="비밀번호">
           </div>
           <button>
             Sign in
