--- a/src/main/resources/templates/admin/adminMain.html
+++ b/src/main/resources/templates/admin/adminMain.html
@@ -15,6 +15,7 @@
 </div>
 <button onclick="getUserList()">회원정보 보기</button>
 <button><a th:href="@{/adminMail.do}">메일보내기</a></button>
+<button><a th:href="@{/addProduct.do}">상품추가하기</a></button>
 </body>
 
 </html>
