--- a/src/main/resources/templates/admin/adminMain.html
+++ b/src/main/resources/templates/admin/adminMain.html
@@ -16,7 +16,7 @@
 <button onclick="getUserList()">회원정보 보기</button>
 <button><a th:href="@{/adminMail.do}">메일보내기</a></button>
 <button><a th:href="@{/addProduct.do}">상품추가하기</a></button>
-<button><a th:href="@{/addCategory.do}">상품추가하기</a></button>
+<button><a th:href="@{/addCategory.do}">카테고리 추가하기</a></button>
 </body>
 
 </html>
