--- a/src/main/resources/templates/admin/adminMain.html
+++ b/src/main/resources/templates/admin/adminMain.html
@@ -17,6 +17,7 @@
 <button><a th:href="@{/adminMail.do}">메일보내기</a></button>
 <button><a th:href="@{/addProduct.do}">상품추가하기</a></button>
 <button><a th:href="@{/addCategory.do}">카테고리 추가하기</a></button>
+<button><a th:href="@{/productList.do}">상품목록 조회</a></button>
 </body>
 
 </html>
