--- a/src/main/resources/templates/productlist.html
+++ b/src/main/resources/templates/productlist.html
@@ -59,16 +59,24 @@
 						<div class="row">
 							<!-- Use th:each to iterate over the list of items -->
 							<div th:each="item : ${items}" class="col-md-6 mb-4">
-							<td><img th:src="${item?.imgs}" width="100" height="100" alt="Item Image 1"></td>
-                        <td><img th:src="${item?.imgs}" width="100" height="100" alt="Item Image 2"></td>
-                        <td><img th:src="${item?.imgs}" width="100" height="100" alt="Item Image 3"></td>
-                        <td><img th:src="${item?.imgs}" width="100" height="100" alt="Item Image 4"></td>
-										<h5 class="card-title" th:text="'이름: ' + ${item?.productName}"></h5>
-										<p class="card-text" th:text="'컨디션: ' + ${item?.productCondition}"></p>
-										<p class="card-text">설명: <span th:text="${item?.productDescription}"></span></p>
-										<p class="card-text">가격: <span th:text="${item?.productPrice}"></span></p>
+								<div class="col-md-3">
+									<img th:src="${item?.img1}" width="300" height="300" alt="Item Image 1">
+								</div>
+								<div class="row">
+									<div class="col-md-4">
+										<img th:src="${item?.img2}" width="100" height="100" alt="Item Image 2">
+									</div>
+									<div class="col-md-4">
+										<img th:src="${item?.img3}" width="100" height="100" alt="Item Image 3">
+									</div>
+									<div class="col-md-4">
+										<img th:src="${item?.img4}" width="100" height="100" alt="Item Image 4">
 									</div>
 								</div>
+								<h5 class="card-title" th:text="'이름: ' + ${item?.productName}"></h5>
+								<p class="card-text" th:text="'상태: ' + ${item?.productCondition}"></p>
+								<p class="card-text">설명: <span th:text="${item?.productDescription}"></span></p>
+								<p class="card-text">가격: <span th:text="${item?.productPrice}"></span></p>
 							</div>
 						</div>
 					</div>
