회원가입기능 수정
마이바티스 매핑수정 및 DTO 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>index</title>
-</head>
-<body>
-<h3>Index pages</h3>
-<a th:href="@{/admin.do}">어드민 페이지</a>
-</body>
+<html layout:decorate="~{layout}">
+<div layout:fragment="content">
+    <h3>Index pages</h3>
+    <a th:href="@{/admin.do}">어드민 페이지</a>
+</div>
 </html>
