--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -51,15 +51,16 @@
     <!-- END SIGN UP -->
     <!-- SIGN IN -->
     <div class="col align-items-center flex-col sign-in">
+
       <div class="form-wrapper align-items-center">
         <div class="form sign-in">
           <div class="input-group">
             <i class='bx bxs-user'></i>
-            <input type="text" placeholder="아이디">
+            <input type="text" name="id" placeholder="아이디">
           </div>
           <div class="input-group">
             <i class='bx bxs-lock-alt'></i>
-            <input type="password" placeholder="비밀번호">
+            <input type="password" name="password" placeholder="비밀번호">
           </div>
           <button>
             Sign in
