--- a/src/main/resources/templates/admin/addProduct.html
+++ b/src/main/resources/templates/admin/addProduct.html
@@ -14,14 +14,17 @@
         <p>상품 상태: <input type="text" name="productCondition">
         <p>상품 가격: <input type="text" name="productPrice">
         <p>상품 설명:</p><textarea name="productDescription"></textarea>
-        <p>상품 이미지: <input type="file" name="image" multiple="multiple">
+        <p>상품 이미지: <input type="file" name="imgs">
+        <p>상품 이미지: <input type="file" name="imgs">
+        <p>상품 이미지: <input type="file" name="imgs">
+        <p>상품 이미지: <input type="file" name="imgs">
         <p>이미지는 최대 4개까지 설정 가능합니다.
             <!--        <p>상품 이미지2: <input type="file" name="image2">-->
             <!--        <p>상품 이미지3: <input type="file" name="image3">-->
             <!--        <p>상품 이미지4: <input type="file" name="image4">-->
         <p>상품 카테고리:<select name="productCategoryId">
-            <option th:each="category : ${categoryList}" th:value="${category.getProductCategoryId()}"
-                    th:utext="${category.getProductCategoryName()}"></option>
+            <option th:each="category : ${categoryList}" th:value="${category.productCategoryId}"
+                    th:utext="${category.productCategoryName}"></option>
         </select>
             <button type="submit">등록하기</button>
     </form>
