이미지 업로드 수정
이미지 업로드 파일 없을 경우 NULL값 채워지게 수정

--- a/src/main/resources/templates/admin/adminProductList.html
+++ b/src/main/resources/templates/admin/adminProductList.html
@@ -27,10 +27,10 @@
             <td th:text="${product.productCondition}"></td>
             <td th:text="${product.productPrice}"></td>
             <td th:text="${product.productDescription}"></td>
-            <td th:text="${product?.imgs}"></td>
-            <td th:text="${product?.imgs}"></td>
-            <td th:text="${product?.imgs}"></td>
-            <td th:text="${product?.imgs}"></td>
+            <td th:text="${product?.img1}"></td>
+            <td th:text="${product?.img2}"></td>
+            <td th:text="${product?.img3}"></td>
+            <td th:text="${product?.img4}"></td>
             <td th:text="${product.productCategoryId}"></td>
         </tr>
     </table>
