간단한 수정
UserResponse 및 UserRequest 삭제
관리자 페이지 버튼 추가

--- a/src/main/resources/templates/admin/adminProductList.html
+++ b/src/main/resources/templates/admin/adminProductList.html
@@ -35,5 +35,9 @@
         </tr>
     </table>
 </div>
+<div>
+    <button><a th:href="@{/admin.do}">관리자 메인 페이지</a></button>
+
+</div>
 </body>
 </html>
