--- a/src/main/resources/templates/productlist.html
+++ b/src/main/resources/templates/productlist.html
@@ -22,6 +22,10 @@
 
 			<!-- Right side -->
 			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+				<form th:action="@{/productlist}" method="get" class="d-flex">
+                    <input type="text" name="keyword" class="form-control me-2" placeholder="상품 이름 검색">
+                    <button type="submit" class="btn btn-outline-dark">검색</button>
+                </form>
 				<ul class="navbar-nav">
 					<li class="nav-item">
 						<form th:action="@{/signin}">
