상품 등록 이미지 검사

--- a/src/main/resources/templates/admin/addProduct.html
+++ b/src/main/resources/templates/admin/addProduct.html
@@ -14,10 +14,10 @@
         <p>상품 상태: <input type="text" name="productCondition">
         <p>상품 가격: <input type="text" name="productPrice">
         <p>상품 설명:</p><textarea name="productDescription"></textarea>
-        <p>상품 이미지: <input type="file" name="imgs">
-        <p>상품 이미지: <input type="file" name="imgs">
-        <p>상품 이미지: <input type="file" name="imgs">
-        <p>상품 이미지: <input type="file" name="imgs">
+        <p>상품 이미지: <input type="file" name="imgs" class="image-input">
+        <p>상품 이미지: <input type="file" name="imgs" class="image-input">
+        <p>상품 이미지: <input type="file" name="imgs" class="image-input">
+        <p>상품 이미지: <input type="file" name="imgs" class="image-input">
         <p>이미지는 최대 4개까지 설정 가능합니다.
             <!--        <p>상품 이미지2: <input type="file" name="image2">-->
             <!--        <p>상품 이미지3: <input type="file" name="image3">-->
@@ -26,53 +26,34 @@
             <option th:each="category : ${categoryList}" th:value="${category.productCategoryId}"
                     th:utext="${category.productCategoryName}"></option>
         </select>
-            <button type="submit">등록하기</button>
+            <p><button type="button" onclick="check()">등록하기</button>
     </form>
 </div>
 
-<!--<script>-->
-<!--    $(document).ready(function() {-->
-<!--        $('#addProductForm').submit(function(e) {-->
-<!--            e.preventDefault();-->
-<!--            var formData = new FormData(this);-->
+<script>
+    function check() {
+        const imageInputs = document.querySelectorAll('.image-input');
+        const imageTypes = ['image/jpeg', 'image/png', 'image/gif']; // 허용되는 이미지 타입
+        
+        imageInputs.forEach(input => {
+            const files = input.files;
+            if (files.length > 0) {
+                const file = files[0];
+                if (imageTypes.includes(file.type)) {
+                    console.log("Image selected!")
+                } else {
+                    alert("이미지 파일만 업로드 가능합니다.")
+                    return;
+                }
+            } else {
+                console.log('No file selected');
+                return;
+            }
+        });
+        console.log("submit^^")
+        // document.getElementById('addProductForm').submit();
 
-<!--            // 이미지 파일 데이터와 텍스트 데이터를 분리하여 서버로 전송-->
-<!--            var imageFile1 = formData.get('img1');-->
-<!--            var imageFile2 = formData.get('img2');-->
-<!--            var imageFile3 = formData.get('img3');-->
-<!--            var imageFile4 = formData.get('img4');-->
-<!--            var productId = document.getElementById("productId").value;-->
-<!--            var productName = document.getElementById('productName').value;-->
-<!--            var productCondition = document.getElementById('productCondition').value;-->
-<!--            var productPrice = document.getElementById('productPrice').value;-->
-<!--            var productDescription =document.getElementById('productDescription').value;-->
-<!--            var productCategoryId = document.getElementById('productCategoryId').value;-->
-
-<!--            $.ajax({-->
-<!--                url: '/addProduct', // 데이터 전송을 처리하는 서버 엔드포인트-->
-<!--                type: 'POST',-->
-<!--                data: {-->
-<!--                    imageFile1: imageFile1,-->
-<!--                    imageFile2: imageFile2,-->
-<!--                    imageFile3: imageFile3,-->
-<!--                    imageFile4: imageFile4,-->
-<!--                    productId : productId,-->
-<!--                    productName : productName,-->
-<!--                    productCondition : productCondition,-->
-<!--                    productPrice : productPrice,-->
-<!--                    productDescription: productDescription,-->
-<!--                    productCategoryId : productCategoryId-->
-<!--                     }, // 데이터를 객체로 전달-->
-<!--                success: function(data) {-->
-<!--                    console.log('전송 성공:', data);-->
-<!--                },-->
-<!--                error: function() {-->
-<!--                    console.error('전송 실패');-->
-<!--                }-->
-<!--            });-->
-<!--        });-->
-<!--    });-->
-
-<!--</script>-->
+    }
+</script>
 </body>
 </html>
