--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -62,7 +62,7 @@
             </div>
           <div class="input-group">
             <i class='bx bxs-user'></i>
-            <input type="text" name="id" placeholder="아이디">
+            <input type="text" name="username" placeholder="아이디">
           </div>
           <div class="input-group">
             <i class='bx bxs-lock-alt'></i>
