--- a/src/main/resources/templates/productlist.html
+++ b/src/main/resources/templates/productlist.html
@@ -23,9 +23,9 @@
 			<!-- Right side -->
 			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
 				<form th:action="@{/productlist}" method="get" class="d-flex">
-                    <input type="text" name="keyword" class="form-control me-2" placeholder="상품 이름 검색">
-                    <button type="submit" class="btn btn-outline-dark">검색</button>
-                </form>
+					<input type="text" name="keyword" class="form-control me-2" placeholder="상품 이름 검색">
+					<button type="submit" class="btn btn-outline-dark">검색</button>
+				</form>
 				<ul class="navbar-nav">
 					<li class="nav-item">
 						<form th:action="@{/signin}">
@@ -59,6 +59,10 @@
 
 				<!-- 상품 리스트 반복 -->
 				<section class="py-5">
+					<div class="col-12 text-end mb-4">
+						<button class="btn btn-outline-dark" onclick="sortByName()">이름순</button>
+						<button class="btn btn-outline-dark" onclick="sortByPrice()">가격순</button>
+					</div>
 					<div class="container px-4 px-lg-5">
 						<div class="row">
 							<!-- Use th:each to iterate over the list of items -->
