상품 수정 테스트 중
403에러 발생

--- a/src/main/resources/templates/admin/productUpdate.html
+++ b/src/main/resources/templates/admin/productUpdate.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div>
-    <form id="updateProductForm" method="put" action="/updateProduct" enctype="multipart/form-data">
+    <form id="updateProductForm" method="post" action="/updateProduct" enctype="multipart/form-data">
 
         <p>상품 ID:<select name="productId" id="productId">
             <option value="0" selected>ID를 선택해주세요</option>
