main action modify
로그인 경로 수정

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -33,7 +33,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <form th:action="@{/signup}" sec:authorize="!isAuthenticated()">
+                    <form th:action="@{/login}" sec:authorize="!isAuthenticated()">
                         <button class="btn btn-outline-dark" type="submit">
                             로그인
                         </button>
