--- a/src/main/resources/templates/admin/adminMain.html
+++ b/src/main/resources/templates/admin/adminMain.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
+<html layout:decorate="~{layout}">
+<div layout:fragment="content">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="/js/Admin.js"></script>
-    <title>adminMain</title>
-</head>
-<body>
-<h3>어드민 페이지 메인입니다</h3>
+
 <div th:text="${data}"></div>
 <div id="userListTable">
 선택해주세요
@@ -19,5 +14,5 @@
 <button><a th:href="@{/addCategory.do}">카테고리 추가하기</a></button>
 <button><a th:href="@{/productList.do}">상품목록 조회</a></button>
 <button><a th:href="@{/productUpdate.do}">상품 수정</a></button>
-</body>
+</div>
 </html>
