--- a/src/main/resources/templates/productlist.html
+++ b/src/main/resources/templates/productlist.html
@@ -6,41 +6,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>전체 상품 보기</title>
 	<!-- Bootstrap core CSS -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Custom styles for this template -->
 	<link href="/css/custom.css" rel="stylesheet">
 </head>
 
 <body>
 	<!-- Top Bar -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<div class="container px-4 px-lg-5">
-			<!-- Left side -->
-			<a class="navbar-brand" href="/main">
-				<button class="btn btn-primary btn-lg">더조은</button>
-			</a>
-
-			<!-- Right side -->
-			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-				<form th:action="@{/productlist}" method="get" class="d-flex">
-					<input type="text" name="keyword" class="form-control me-2" placeholder="상품 이름 검색">
-					<button type="submit" class="btn btn-outline-dark">검색</button>
-				</form>
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<form th:action="@{/login}">
-							<button class="btn btn-outline-dark" type="submit">로그인</button>
-						</form>
-					</li>
-					<li class="nav-item">
-						<form th:action="@{/signup}">
-							<button class="btn btn-outline-dark" type="submit">회원가입</button>
-						</form>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+	<nav th:replace="~{navbar :: navbarFragment}"></nav>
 
 
 	<!-- Item List -->
