--- a/src/main/resources/templates/reviewList.html
+++ b/src/main/resources/templates/reviewList.html
@@ -2,9 +2,11 @@
 <html lang="ko" xmlns:th="<http://www.thymeleaf.org>">
 <head>
     <title>board</title>
-    <link rel="stylesheet" th:href="@{/css/style.css}"></link>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
+<nav th:replace="~{navbar :: navbarFragment}"></nav>
 <div class="container">
     <h2>게시글 목록</h2>
     <table class="board_list">
