가격순▼ 등록순▼(클릭시▲ 변환) 추가 및 기능구현

--- a/src/main/resources/templates/ProductDetail.html
+++ b/src/main/resources/templates/ProductDetail.html
@@ -35,6 +35,9 @@
 						<img src="/jpg/carttest.png" alt="장바구니 이미지" width="20" height="20">
 					</a>
 				</form>
+				<form action="javascript:history.back()">
+					<button type="submit" class="back-button">돌아가기</button>
+				</form>
 			</tr>
 			<table class="table">
 				<thead>
