--- a/src/main/resources/templates/productlist.html
+++ b/src/main/resources/templates/productlist.html
@@ -52,11 +52,12 @@
 					<button class="btn btn-outline-dark px-5">카테고리 4</button>
 				</div>
 
-				<!-- 상품 리스트 반복 -->
-				<section class="py-3">
 
+				<section class="py-3">
+					<!-- 상품 정렬 버튼  -->
 					<div class="d-flex justify-content-end px-5">
 						<form th:action="@{/productlist}" method="get" class="d-flex">
+							<input type="hidden" name="keyword" th:value="${keyword}">
 							<button type="submit" name="Sequence" id="nameBtn" class="btn btn-outline-dark"
 								th:value="${Sequence == '3' ? '2' : '3'}"
 								th:text="${Sequence == '3' ? '등록순▲' : '등록순▼'}">등록순▼</button>
@@ -70,6 +71,7 @@
 
 			</div>
 			<br>
+			<!-- 상품 리스트 반복 -->
 			<div class=" px-4 px-lg-5">
 				<div class="row">
 					<!-- Use th:each to iterate over the list of items -->
@@ -89,6 +91,7 @@
 									<img th:src="${item?.img4}" width="120" height="100" alt="Item Image 4">
 								</div>
 							</div>
+							<br>
 							<div class="row justify-content-end px-5">
 								<form th:action="@{/ordershow}" method="get" class="d-flex px-2 py-2">
 									<input type="hidden" name="order" th:value="${item?.productId}">
